--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "This library provides fake data for users data from Brazil",
   "main": "index.js",
   "dependencies": {
+    "axios": "^1.3.4",
     "ts-mixer": "^6.0.3"
   },
   "devDependencies": {},
