--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "main": "index.js",
   "dependencies": {
     "axios": "^1.3.4",
+    "moment": "^2.29.4",
+    "moment-random": "^1.1.0",
     "ts-mixer": "^6.0.3"
   },
   "devDependencies": {},
