--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "netmask": "^2.0.2",
     "ts-mixer": "^6.0.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "jest": "^29.5.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
